# computer_graphics

./: InverseMapping.ipynb  README.md  dotProduct.py  inverseMapping.py  inverseMappingHW.ipynb  outputHmg.txt  srcRedVals.txt
Inverse_mapping_HW1/: inverseMapping.py  inverseMappingHW.ipynb  output.txt
Inverse_mapping_HW1/Inverse Mapping Homework (DAO)/: inverseMappingHW.ipynb
Inverse_mapping_HW1/rust/iverse_mapping/: Cargo.toml
Inverse_mapping_HW1/rust/iverse_mapping/src/: main.rs
Morphing_HW3/: image_morphing.ipynb  shape_interpolation.ipynb
Morphing_HW3/tutorialAffineWarp/__MACOSX/tutorialAffineWarp/: ._gpeyre.xsl
Morphing_HW3/tutorialAffineWarp/tutorialAffineWarp/: er_publish.m  gpeyre.xsl  tutorialAffineWarp.m
Morphing_HW3/tutorialAffineWarp/tutorialAffineWarp/html/: tutorialAffineWarp.html
Robot_inv_kinematics_HW6/: jacobian.m  legacy_main.py  linalg_utils.py  main.ipynb  main.py  notes_example.ipynb  pathFinding.py  robot.py  simpy_test.ipynb
Robot_inv_kinematics_HW6/docs/: main.py
Robot_inv_kinematics_HW6/video_output/: anim_no_constraints.webm  anim_w_constraints.webm
Robot_kinematics_HW5/: 2D_bot_kinematics.py  2d_kin.py  READM.md
collision_free_path_HW4/: collision_free_path.ipynb  collision_free_path.py
rust/iverse_mapping/: Cargo.toml
rust/iverse_mapping/src/: main.rs
shape_interpolation_HW2/: shape_interpolation.ipynb  shape_interpolation.py
