[package]
name = "iverse_mapping"
version = "0.1.0"
authors = ["pascal <pdao2015@my.fit.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.22.4"
nalgebra = "0.18.1"
rulinalg = "0.4.2"
ndarray = "0.13.0"
